Fixed spacing and adjusted terminal height, line 300

--- a/external.css
+++ b/external.css
@@ -297,7 +297,7 @@ button:focus, button:hover{
     background-color: #071b2f;
     padding: 10px 0px 10px ;
     width: 55%;
-    height: 30rem;
+    height: 32.5rem;
     border-radius: 0.125rem;
     margin-left: auto;
     margin-right: auto;
@@ -316,9 +316,15 @@ button:focus, button:hover{
     margin-left: 10px;
 }
 
- .terminal_message, .terminal_message_facts{
-     margin-left: 10px;
- }
+ .terminal_message{
+    margin-left: 10px;
+    padding: 0;
+}
+
+.terminal_message_facts{
+    margin: 0;
+    margin-left: 10px;
+}
 /* FOOTER */
 .col-4{
     font-weight: 500;
